--- a/Wallstreet/bazaar/templates/bazaar/index.html
+++ b/Wallstreet/bazaar/templates/bazaar/index.html
@@ -148,7 +148,7 @@
                 <div class="d-flex align-items-center">
                   <div class="icon icon-sm bg-violet text-white"><i class="fa fa-bar-chart" aria-hidden="true"></i></div>
                   <div class="text ml-2">
-                    <p class="mb-0">Sensex - {{ sensex }}</p>
+                    <p class="mb-0">Sensex: {{ sensex }}</p>
                   </div>
                 </div></a>
                 <a href="{% url 'bazaar:news' %}" class="dropdown-item">
@@ -162,7 +162,8 @@
             </div>
           </li>
           <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="{% static 'bazaar/img/navLogo.png' %}" alt="Jason Doe" style="max-width: 1.5rem;" class="img-fluid rounded-circle shadow"></a>
-            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Rank: {{ profile.rank }}</small><br/><small>Valuation: {{ profile.cash }}</small></a>
+            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Cash: {{ profile.cash }}</small><br/><small>Net Worth: {{ profile.netWorth }}</small><br/><small>Rank: {{ profile.rank }}</small></a>
+              <div class="dropdown-divider"></div><a href="#sectionMyShares" class="dropdown-item">Your Shares</a>
               <div class="dropdown-divider"></div><a href="{% url 'bazaar:transactions' %}" class="dropdown-item">Transaction History</a>
               <div class="dropdown-divider"></div><a href="{%url 'bazaar:logoff'%}" class="dropdown-item">Logout</a>
             </div>
@@ -176,8 +177,9 @@
         <ul class="sidebar-menu list-unstyled">
               <li class="sidebar-list-item"><a href="{%url 'bazaar:index' %}" class="sidebar-link text-muted active"><i class="o-home-1 mr-3 text-gray"></i><span>Home</span></a></li>
               <li class="sidebar-list-item"><a href="{%url 'bazaar:company' %}" class="sidebar-link text-muted"><i class="o-table-content-1 mr-3 text-gray"></i><span>Company Info</span></a></li>
+              <li class="sidebar-list-item"><a href="#sectionMyShares" class="sidebar-link text-muted"><i class="o-table-content-1 mr-3 text-gray"></i><span>Your Shares</span></a></li>
               <li class="sidebar-list-item"><a href="{%url 'bazaar:buy' %}" class="sidebar-link text-muted"><i class="o-sales-up-1 mr-3 text-gray"></i><span>Buy</span></a></li>
-              <li class="sidebar-list-item"><a href="{%url 'bazaar:sell' %}" class="sidebar-link text-muted"><i class="o-table-content-1 mr-3 text-gray"></i><span>Sell</span></a></li>
+              <li class="sidebar-list-item"><a href="{%url 'bazaar:sell' %}" class="sidebar-link text-muted"><i class="o-sales-up-1 mr-3 text-gray"></i><span>Sell</span></a></li>
               <li class="sidebar-list-item"><a href="{%url 'bazaar:news' %}" class="sidebar-link text-muted"><i class="o-table-content-1 mr-3 text-gray"></i><span>News</span></a></li>
               <li class="sidebar-list-item"><a href="{%url 'bazaar:transactions' %}" class="sidebar-link text-muted"><i class="o-table-content-1 mr-3 text-gray"></i><span>Transactions</span></a></li>
               <li class="sidebar-list-item"><a href="{%url 'bazaar:leaderboard' %}" class="sidebar-link text-muted"><i class="o-survey-1 mr-3 text-gray"></i><span>Leaderboard</span></a></li>
@@ -285,6 +287,7 @@
 
 
           <section>
+            <p style="display: none" id="companiesData">{{companies}}</p>
             <div class="row">
               <div class="col-lg-12 m-2 mb-3">
                 <div class="card mb-5 mb-lg-0">
@@ -297,36 +300,62 @@
                         <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-outline-primary dropdown-toggle"></button>
                         <div class="dropdown-menu">
                           {% for company in companies %}
-                          <a href="#" class="dropdown-item">{{ company.name }} - {{ company.sharePrice }}</a>
+                            <a id="company_link_{{forloop.counter}}" class="dropdown-item">{{ company.name }}</a>
                           {% endfor %}
                         </div>
                       </div>
-                      <input type="text" aria-label="Text input with dropdown button" class="form-control" placeholder="Search...">
+                      <input id="Search" type="text" aria-label="Text input with dropdown button" class="form-control" placeholder="Search...">
+                    </div>
+                    <div class=" table-responsive">
+                      <table class="table table-striped table-hover card-text" style="color: white;border-radius: 10px">
+                        <thead>
+                          <tr>
+                            <th>Company</th>
+                            <th>Share Price</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for company in companies %}
+                          <tr id="company_{{forloop.counter}}" style="">
+                            <th>{{ company.name }}</th>
+                            <th>Rs. {{ company.sharePrice }}</th>
+                          </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
+                      <p id="length" style="display: none">{{companies.count}}</p>
                     </div>
                   </div>
                 </div>
               </div>
 
 
-              <div class="col-lg-12 m-2 mb-3 mt-2">
+              <div class="col-lg-12 m-2 mb-3 mt-2" id="sectionMyShares">
                 <div class="card mb-5 mb-lg-0">
                   <div class="card-header">
-                    <h2 class="h6 mb-0 text-uppercase">My Shares</h2>
+                    <h2 class="h6 mb-0 text-uppercase">Your Shares</h2>
                   </div>
                   <div class="card-body">
-
-                    {% for share in userShareTable %}
-                    <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
-                      <div class="left d-flex align-items-center">
-                        <div class="text">
-                          <h5 class="mb-0 d-flex align-items-center"> <span style="color: white">{{ share.company }}</span><span class="dot dot-sm ml-2 bg-violet"></span></h5>
-                        </div>
-                      </div>
-                      <div class="right ml-5 ml-sm-0 pl-3 pl-sm-0 text-violet">
-                        <h5>Number of Shares - {{ share.bidShares }}</h5>
-                      </div>
+                    <div class=" table-responsive">
+                      <table class="table table-striped table-hover card-text" style="color: white;border-radius: 10px">
+                        <thead>
+                          <tr>
+                            <th>Company</th>
+                            <th>No. of Shares</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for share in userShareTable %}
+                          <tr id="company_{{forloop.counter}}" style="">
+                            <th>{{ share.company }}</th>
+                            <th>{{ share.bidShares }}</th>
+                          </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
+                      <p id="length" style="display: none">{{companies.count}}</p>
                     </div>
-                    {% endfor %}
+                    
                   </div>
                 </div>
               </div>
@@ -350,7 +379,34 @@
         </footer>
       </div>
     </div>
-
+    
+    
+    <script>
+      //let i = 2
+      //document.getElementById("company_"+i.toString()).style = ""
+      number_of_companies = parseInt(document.getElementById("length").innerHTML)
+      search = document.getElementById("Search")
+      
+      let list_of_companies = []
+      for(i=1;i<=number_of_companies;i++){
+        list_of_companies.push(document.getElementById("company_"+i.toString()).childNodes[1].childNodes[0].nodeValue)
+        
+      }
+      
+      
+      
+      search.oninput = function(){
+        for(let i=0;i<list_of_companies.length;i++){
+          if( list_of_companies[i].toLowerCase().startsWith(search.value.toLowerCase())){
+            document.getElementById("company_"+(i+1).toString()).style = ""
+          }
+          else{
+            document.getElementById("company_"+(i+1).toString()).style = "display:none"
+          }
+        }
+      }
+      
+    </script>
 
     <!-- JavaScript files-->
     <script src="{% static 'bazaar/vendor/jquery/jquery.min.js'%}"></script>
