--- a/Wallstreet/bazaar/templates/bazaar/buy.html
+++ b/Wallstreet/bazaar/templates/bazaar/buy.html
@@ -100,37 +100,45 @@
                 <div class="card">
                   <div class="card-header">
                     <h3 class="h6 text-uppercase mb-0" align="text-center">Buy</h3>
+                    
                   </div>
                   <div class="card-body">
+                    <p style="color: red">* Value beside the company indicates current share price</p>
                     {% if message %}
                       <p style="color: red">{{message}}</p>
                     {% endif %}
+                    <p id="validation" style="color: red;display: none">Invalid Bid</p>
+                    <p id="cashValidation" style="color: red;display: none">You do not have enough cash to buy the shares</p>
                     <form action="/buy/" id="buyForm" method="post">
                       {%csrf_token%}
                       <div class="form-group">
 
                             <div class="select">
                               <label class="form-control-label text-uppercase">Company</label>
-                              <select name="companyName" class="form-control" style="width: 100%" form="buyForm">
+                              <select id="company" name="companyName" class="form-control" style="width: 100%" form="buyForm">
                                 {% for company in companies %}
                                 <option style="color: black">{{ company.name }} :   Rs.{{ company.sharePrice }}</option>
                                 {% endfor %}
                               </select>
                             </div>
+                        
 
                       </div>
                       <div class="form-group">
                         <label class="form-control-label text-uppercase">Quantity</label>
-                        <input type="text" placeholder="Quantity" class="form-control" name="quantity">
+                        <input id="quantity" type="text" placeholder="Quantity" class="form-control" name="quantity">
                       </div>
                       <div class="form-group">
                         <label class="form-control-label text-uppercase">Bid Price</label>
-                        <input type="text" placeholder="Bid Price" class="form-control" name="price">
+                        <input id="bidPrice" type="text" placeholder="Bid Price" class="form-control" name="price">
                       </div>
                       <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button id="submitForm" style="display:none" type="submit" class="btn btn-primary"></button>
+                        
                       </div>
                     </form>
+                    <button id="submitButton" class="btn btn-primary">Submit</button>
+                    <p id="cash" style="display: none">{{profile.cash}}</p>
                   </div>
                 </div>
               </div>
@@ -155,6 +163,35 @@
         </footer>
       </div>
     </div>
+
+    <script>
+      document.getElementById("submitButton").onclick = function(){
+        selectString = document.getElementById("company").value
+        currentPrice = ""
+        for(let i = selectString.length - 1;selectString[i]!=".";i--){
+          currentPrice = selectString[i]+currentPrice
+        }
+        currentPrice = parseInt(currentPrice)
+        bidPrice = parseInt(document.getElementById("bidPrice").value)
+        quantity = parseInt(document.getElementById("quantity").value)
+        cash = parseInt(document.getElementById("cash").innerHTML)
+        
+        if(isNaN(bidPrice) || isNaN(quantity) || bidPrice<=0 || quantity<=0 || bidPrice<0.9*currentPrice || bidPrice>1.1*currentPrice){
+          document.getElementById("validation").style = "color:red"
+          document.getElementById("cashValidation").style = "display:none"
+        }
+        else if(cash<=0 || cash<=(quantity*bidPrice*1.1)){
+          document.getElementById("cashValidation").style = "color:red"
+          document.getElementById("validation").style = "display:none"
+        }
+        else{
+          document.getElementById("submitForm").click()
+        }
+        
+        
+      }
+    </script>
+    
     <!-- JavaScript files-->
     <script src="{% static 'bazaar/vendor/jquery/jquery.min.js'%}"></script>
     <script src="{% static 'bazaar/vendor/popper.js/umd/popper.min.js'%}"> </script>
