Celery Tasks fixed

--- a/Wallstreet/bazaar/templates/bazaar/leaderboard.html
+++ b/Wallstreet/bazaar/templates/bazaar/leaderboard.html
@@ -119,7 +119,7 @@
                       <tr>
                         <th scope="row">{{ leaderboardentry.profile.rank }}</th>
                         <td>{{ leaderboardentry.profile.user.username }}</td>
-                        <td>{{ leaderboardentry.profile.cash }}</td>
+                        <td>{{ leaderboardentry.profile.netWorth }}</td>
                       </tr>
                       {% endfor %}
                       </tbody>
