BidRange Passed as context

--- a/Wallstreet/bazaar/templates/bazaar/buy.html
+++ b/Wallstreet/bazaar/templates/bazaar/buy.html
@@ -90,6 +90,8 @@
         </ul>
 
       </div>
+      <p style="display:none;" id="bidRange">{{ bidRange }}</p>
+
       <div class="page-holder w-100 d-flex flex-wrap">
         <div class="container-fluid px-xl-5">
           <section class="py-5">
